Change Log for OpenXava project
===============================

OpenXava 7.3.3 (2024-6-14)
--------------------------
- New Maven archetypes "openxava-project-management-archetype" in English and Spanish (-spanish).
- New Maven archetypes "openxava-crm-archetype" in English and Spanish (-spanish).
- Maven install and package now skip tests by default in new created projects and openxavatest.
- Some new common use labels to be used in applications.
- Commons Validator upgraded to 1.9.0.
- HSQLDB embedded database upgraded to 2.7.3.
- Fix: Module broken when field content has dollar followed by curly brackets.
- Fix: Calling to Tab.setTabName() or Tab.setBaseCondition() does not go to the first page automatically.
- Fix: Style of the just unselected row not restored in single selection lists, those with radio buttons. 
- Fix: @DescriptionsList shows incorrect data if there are keys with the same value in lower and uppercase. 
- Fix: Removing a row from an @ElementCollection not persisted if the row contains a boolean.
- Fix: Editors for annotations do not work for references and collections. 
- Fix: Icon in date fields and @DescriptionsList not visible on hover inside dialog in Dark theme.
- Fix: List data inside dialog not readable in Dark theme. 
- Fix: The color for the list data in the dialog is not the same as without the dialog.
- Fix: Unused CSS from old Yahoo TreeView JS component loaded.
- Fix: Reference search with dialog in the last line of an @ElementCollection alters previous row reference.
- Fix: Cannot assign value to a reference with 0 as key because the reference is cleaned from the view.
- Fix: Original error messages from database constraints or triggers are not shown to the user. 

OpenXava 7.3.2 (2024-5-24)
--------------------------
- New Maven archetypes "openxava-master-detail-archetype" in English and Spanish (-spanish).
- Some new common use labels to be used in applications.
- Commons Logging upgraded to 1.3.2.