@@ -8,7 +8,7 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<openxava.version>7.3.3</openxava.version>
+		<openxava.version>7.4-SNAPSHOT</openxava.version>
 		<project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
 		<!-- Las aplicaciones OpenXava funcionan bien con Java 1.8, 11, 17 y 21 -->
 		<maven.compiler.source>1.8</maven.compiler.source>
