@@ -5,5 +5,5 @@
 archetype.groupId=org.openxava
 archetype.artifactId=openxava-project-management-archetype
 archetype.package=org.openxava.archetype
-archetype.version=7.3.3
+archetype.version=7.4-SNAPSHOT
 excludePatterns=temp/,LICENSE.txt,archetype-pom.xml
