@@ -9,7 +9,7 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<openxava.version>7.3.3</openxava.version>
+		<openxava.version>7.4-SNAPSHOT</openxava.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<!-- OpenXava applications work nicely with Java 1.8, 11, 17 and 21 -->
 		<maven.compiler.source>1.8</maven.compiler.source>
